(SIMP-604) Migrate to simplib and simpcat
Before this commit, common SIMP-related custom functions were been kept
in either `simp-common` or `simp-functions`, and the `concat` function
was provided by the `simp-concat` module.  These functions are now
provides by the `simp-simplib` and `simp-simpcat` modules, respectively.

This update replaces all requirements in the RPM spec file,
metadata.json, or .fixtures.yml to reflect the migration to the new
modules.

SIMP-601 #comment Migrated `pupmod-simp-libvirt`.
SIMP-604 #comment Updated `pupmod-simp-libvirt`.

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -4,6 +4,7 @@ fixtures:
     augeasproviders_sysctl: "git://github.com/simp/augeasproviders_sysctl"
     augeasproviders_core: "git://github.com/simp/augeasproviders_core"
     common: "git://github.com/simp/pupmod-simp-common"
+    simplib: 'git://github.com/simp/pupmod-simp-simplib'
     stdlib: "git://github.com/simp/puppetlabs-stdlib"
     sysctl: "git://github.com/simp/pupmod-simp-sysctl"
   symlinks:
