(SIMP-1054) Update static assets to fix spec tests
Before this patch, this module would fail its spec tests when
`STRICT_VARIABLES=yes` is set (as it is in Travis CI tests).
This was caused by the presence of the unset (and unused) variable
"spec_title" in the modules' fixture hieradata/hiera.yaml.

This commit fixes the issue by removing "spec_title" from
each module's hieradata/hiera.yaml.

SIMP-1054 #comment Fixed pupmod-simp-libvirt
SIMP-1079 #commented converted spec tests from `should` to `expect`
SIMP-1079 #commented sanitized template logic
SIMP-1079 #commented Added `on_supported_os` logic to spec tests
SIMP-1079 #commented bumped version to `4.1.1`
SIMP-1079 #close Fixed spec failures when `STRICT_VARIABLES=yes`

Change-Id: I720108c43906cc824de2ec4995033a675261dfbd

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,9 +1,12 @@
 ---
 fixtures:
   repositories:
-    augeasproviders_sysctl: "git://github.com/simp/augeasproviders_sysctl"
-    augeasproviders_core: "git://github.com/simp/augeasproviders_core"
-    common: "git://github.com/simp/pupmod-simp-common"
+    augeasproviders_core:
+      repo : 'https://github.com/simp/augeasproviders_core'
+      branch : 'simp-master'
+    augeasproviders_sysctl:
+      repo : 'https://github.com/simp/augeasproviders_sysctl'
+      branch : 'simp-master'
     simplib: 'git://github.com/simp/pupmod-simp-simplib'
     stdlib: "git://github.com/simp/puppetlabs-stdlib"
     sysctl: "git://github.com/simp/pupmod-simp-sysctl"
