--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,15 +2,19 @@
 fixtures:
   repositories:
     augeasproviders_core:
-      repo: 'https://github.com/simp/augeasproviders_core'
-      branch: 'simp-master'
+      branch: 5.X
+      repo: https://github.com/simp/augeasproviders_core
     augeasproviders_sysctl:
-      repo: 'https://github.com/simp/augeasproviders_sysctl'
-      branch: 'simp-master'
-    simplib: 'https://github.com/simp/pupmod-simp-simplib'
+      branch: 5.X
+      repo: https://github.com/simp/augeasproviders_sysctl
+    simplib:
+      repo: https://github.com/simp/pupmod-simp-simplib
+      branch: 5.X
     stdlib:
-      repo: 'https://github.com/simp/puppetlabs-stdlib'
-      branch: 'simp-master'
-    sysctl: 'https://github.com/simp/pupmod-simp-sysctl'
+      branch: 5.X
+      repo: https://github.com/simp/puppetlabs-stdlib
+    sysctl:
+      repo: https://github.com/simp/pupmod-simp-sysctl
+      branch: 5.X
   symlinks:
     libvirt: "#{source_dir}"
