Revert "attempt travis fix"
This reverts commit 2cd6293da24a8fff2d4068869cfec3d5a41f7b9a.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ before_install:
 
 jobs:
   allow_failures:
-    - stage: spec
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
+    - env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
 
   include:
     - stage: check
