(SIMP-2631) libvirt: Modernize and test
- Use kmod::load instead of ruby script for loading the kernel module
- Modernize some code
  - Moved all parameters to init.pp while also
    maintaining previous functionality
- Spec test cleanup
- New acceptance test (no nested virtualization)
- Corrected some documentation and examples

SIMP-2631 #close

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,6 +3,7 @@ fixtures:
   repositories:
     augeasproviders_core: https://github.com/simp/augeasproviders_core
     augeasproviders_sysctl: https://github.com/simp/augeasproviders_sysctl
+    kmod: https://github.com/simp/puppet-kmod.git
     polkit: https://github.com/simp/pupmod-simp-polkit
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/simp/puppetlabs-stdlib
