Code, doc, and test updates
- Added a `libvirt_br_netfilter_loaded` fact to determine if the
`br_netfilter`
  kernel module is loaded on the target system
- Documentation update
- Data in modules update
- Use `ensure_packages` for package installation
- Fully decouple `libvirt::ksm` from the main `libvirt` class

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,9 +2,12 @@
 version: 4
 datadir: data
 hierarchy:
-  - name: "OSFamily + Release"
+  - name: "OS + Release"
     backend: "yaml"
-    path: "os/%{facts.osfamily}-%{facts.operatingsystemmajrelease}"
+    path: "os/%{facts.operatingsystem}-%{facts.operatingsystemmajrelease}"
+  - name: "OS"
+    backend: "yaml"
+    path: "os/%{facts.operatingsystem}"
   - name: "OSFamily"
     backend: "yaml"
     path: "os/%{facts.osfamily}"
