--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,11 @@ jobs:
         - bundle exec rake pkg:check_version
         - bundle exec rake metadata_lint
         - bundle exec rake compare_latest_tag
+        - bundle exec rake lint
+        - bundle exec puppet module build
 
     - stage: spec
-      rvm: 2.1.9
+      rvm: 2.4.1
       env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
       script:
         - bundle exec rake spec
