--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -194,6 +194,7 @@ default-acceptance:
   variables:
     PUPPET_VERSION: '4.10'
   script:
+    - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
 
 fips-acceptance:
@@ -206,6 +207,7 @@ fips-acceptance:
     PUPPET_VERSION: '4.10'
     BEAKER_fips: 'yes'
   script:
+    - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
 
 acceptance-puppet5-default:
@@ -213,8 +215,9 @@ acceptance-puppet5-default:
   tags:
     - beaker
   <<: *cache_bundler
-  <<: *setup_env_beaker
+  <<: *setup_bundler_env
   script:
+    - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default,puppet5]
 
 acceptance-fips-puppet5-default:
@@ -222,10 +225,11 @@ acceptance-fips-puppet5-default:
   tags:
     - beaker
   <<: *cache_bundler
-  <<: *setup_env_beaker
+  <<: *setup_bundler_env
   variables:
     BEAKER_fips: 'yes'
   script:
+    - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default,puppet5]
 
 acceptance-oel-puppet5-default:
@@ -233,8 +237,9 @@ acceptance-oel-puppet5-default:
   tags:
     - beaker
   <<: *cache_bundler
-  <<: *setup_env_beaker
+  <<: *setup_bundler_env
   variables:
     PUPPET_VERSION: '5.4'
   script:
+    - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default,oel_p5]
