(SIMP-7303) Add support for EL8
- Add support for EL8
- Update README.md
- Add REFERENCE.md
- Fix issues with module data
- Split out install and service into separate classes

SIMP-7303 #close
SIMP-7202 #comment Add EL8 support to simp-libvirt

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -4,7 +4,12 @@ lookup_options:
     merge:
       strategy: deep
       knockout_prefix: --
-  libvirt::kvm_package_list:
+  libvirt::kvm::package_list:
     merge:
       strategy: deep
       knockout_prefix: --
+
+libvirt::kvm::package_list:
+  - libsndfile
+  - qemu-img
+  - qemu-kvm
