--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,11 +1,11 @@
 ---
 fixtures:
   repositories:
-    augeasproviders_core: https://github.com/simp/augeasproviders_core
-    augeasproviders_sysctl: https://github.com/simp/augeasproviders_sysctl
+    augeasproviders_core: https://github.com/simp/augeasproviders_core.git
+    augeasproviders_sysctl: https://github.com/simp/augeasproviders_sysctl.git
     kmod: https://github.com/simp/puppet-kmod.git
-    polkit: https://github.com/simp/pupmod-simp-polkit
-    simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib: https://github.com/simp/puppetlabs-stdlib
+    polkit: https://github.com/simp/pupmod-simp-polkit.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
   symlinks:
     libvirt: "#{source_dir}"
